# sdss_legacy

./: README.md  setup.cfg  setup.py
scripts/: ExtinctionExpt.py
sdss_legacy/: LICENSE.txt  __init__.py  catalog.py  sed_sdss.py
