
[metadata]
package_name = sdss_legacy
description = Access SDSS-I/SDSS-II MGS and QSO catalog and spectral data
long_description = Access SDSS-I/SDSS-II MGS and QSO catalog and spectral data
author = Tom Loredo
author_email = loredo@astro.cornell.edu
license = BSD 3-Clause
url = TBD
edit_on_github = False
github_project = tloredo/astrodata
# install_requires should be formatted as a comma-separated list, e.g.:
# install_requires = scipy, matplotlib, astropy, astroquery, dust_extinction, dustmaps
install_requires = scipy, matplotlib, astropy, astroquery, dust_extinction, dustmaps
# version should be PEP440 compatible (https://www.python.org/dev/peps/pep-0440/)
version = 2022.1b1
# Note: you will also need to change this in your package's __init__.py
minimum_python_version = 3.8

